--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -290,7 +290,17 @@ jobs:
       matrix:
         java-version: ['17', '21.0.2']
         java-package: ['', 'jdk', 'jdk+fx']
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest],
+        include:
+          - java-version: '25'
+            java-package: 'jdk+fx'
+            os: ubuntu-latest
+          - java-version: '25'
+            java-package: 'jdk+fx'
+            os: macos-latest
+          - java-version: '25'
+            java-package: 'jdk+fx'
+            os: windows-latest
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - name: Run setup-graalvm action
