--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -290,7 +290,7 @@ jobs:
       matrix:
         java-version: ['17', '21.0.2']
         java-package: ['', 'jdk', 'jdk+fx']
-        os: [ubuntu-latest, macos-latest, windows-latest],
+        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - java-version: '25'
             java-package: 'jdk+fx'
